# dougbot-trainer

./: .env.example  .gitignore  .tool-versions  LICENSE  pyproject.toml  trainer.py
lib/: __init__.py  config.py  hf_dataset.py  llm.py  string_utils.py  tokens_util.py
