[tool.poetry]
name = "dougbot-trainer"
version = "0.0.1"
description = "Opinionated LLM trainer"
authors = ["Drew Easley <drew@agilesyndro.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wandb = "^0.18.6"
datasets = "^3.1.0"
transformers = "^4.46.2"
torch = "^2.5.1"
accelerate = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
